; ModuleID = '/home/carl/AnghaBench/libgit2/src/transports/extr_ssh.c_git_smart_subtransport_ssh.c'
source_filename = "/home/carl/AnghaBench/libgit2/src/transports/extr_ssh.c_git_smart_subtransport_ssh.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@GIT_ERROR_INVALID = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [67 x i8] c"cannot create SSH transport. Library was built without SSH support\00", align 1
@_ssh_action = common dso_local global i32 0, align 4
@_ssh_close = common dso_local global i32 0, align 4
@_ssh_free = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @git_smart_subtransport_ssh(i32** %0, i8* %1, i8* %2) #0 {
  %4 = alloca i32**, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  store i32** %0, i32*** %4, align 8
  store i8* %1, i8** %5, align 8
  store i8* %2, i8** %6, align 8
  %7 = load i8*, i8** %5, align 8
  %8 = call i32 @GIT_UNUSED(i8* %7)
  %9 = load i8*, i8** %6, align 8
  %10 = call i32 @GIT_UNUSED(i8* %9)
  %11 = load i32**, i32*** %4, align 8
  %12 = call i32 @assert(i32** %11)
  %13 = load i32**, i32*** %4, align 8
  store i32* null, i32** %13, align 8
  %14 = load i32, i32* @GIT_ERROR_INVALID, align 4
  %15 = call i32 @git_error_set(i32 %14, i8* getelementptr inbounds ([67 x i8], [67 x i8]* @.str, i64 0, i64 0))
  ret i32 -1
}

declare dso_local i32 @GIT_UNUSED(i8*) #1

declare dso_local i32 @assert(i32**) #1

declare dso_local i32 @git_error_set(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
